--- a/example_Ising.ipynb
+++ b/example_Ising.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "β = .5;\n",
+    "β = .5; #set temperature\n",
     "ψ = DC.IsingFG(N,β*h,β*J, :EnergyFun); # computes moments numerically by running the trace over {-1,1}^2\n",
     "#ψ = DC.IsingFG(N,β*h,β*J, :IsingPair); # computes moments analytically"
    ]
@@ -174,8 +174,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Covariance matrix of tilted distribution\n",
-    "$$ \\Sigma^{tilted}_{ij}\\neq 0 \\leftrightarrow (i,j)\\in E $$"
+    "### Covariance matrix of tilted distribution(s)\n",
+    "$ \\Sigma^{tilted}_{ij} = \\langle x_i x_j \\rangle_{q^{(ij)}} - \\langle x_i \\rangle_{q^{(ij)}} \\langle x_j \\rangle_{q^{(ij)}} \\neq 0 \\leftrightarrow (i,j)\\in E $"
    ]
   },
   {
@@ -218,7 +218,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Covariance matrix of the full Gaussian distribution"
+    "### Covariance matrix of the full Gaussian distribution\n",
+    "all entries of $\\Sigma$ are $$"
    ]
   },
   {
